--- a/Index.html
+++ b/Index.html
@@ -7,6 +7,14 @@
     <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
-    
+  <div id="game-main">
+    <h1>WELCOME TO THE GUESSING GAME</h1>
+    <p></p>
+    <div>
+        <input type="text" placeholder="GUESS A NUMBER"><br>
+        <button>Submit</button>
+      </div>
+  </div>
+  
 </body>
 </html>
