--- a/Index.html
+++ b/Index.html
@@ -8,13 +8,17 @@
 </head>
 <body>
   <div id="game-main">
-    <h1>WELCOME TO THE GUESSING GAME</h1>
+    <h1>WELCOME TO MY GUESSING GAME</h1>
     <p></p>
     <div>
-        <input type="text" placeholder="GUESS A NUMBER"><br>
-        <button>Submit</button>
+        <input type="text" placeholder="GUESS A NUMBER" id = 'guess'><br>
+        <button id='submit-btn'>Submit</button>
       </div>
+      <p id="result"></p>
+<p id="tries"></p>
   </div>
-  
+
+
+  <script src="scripts/index.js"></script>
 </body>
 </html>
