--- a/Index.html
+++ b/Index.html
@@ -11,8 +11,8 @@
     <h1>WELCOME TO MY GUESSING GAME</h1>
     <p></p>
     <div>
-        <input type="text" placeholder="GUESS A NUMBER" id = 'guess'><br>
-        <button id='submit-btn'>Submit</button>
+        <input type="text" placeholder="GUESS A NUMBER" id = "guess"><br>
+        <button id="submit-btn">Submit</button>
       </div>
       <p id="result"></p>
 <p id="tries"></p>
